<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark">

    <RelativeLayout
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:animateLayoutChanges="true">

        <ImageView
            android:id="@+id/screencast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/pref_camera_name_screen_capture"
            android:src="@drawable/screen_cast"
            android:visibility="gone" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/overlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/preview"
        android:layout_alignStart="@+id/preview" />

    <FrameLayout
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/preview"
        android:layout_alignEnd="@+id/preview" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="100">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="10" />

        <com.github.stkent.amplify.prompt.DefaultLayoutPromptView
            android:id="@+id/prompt_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="80"
            android:animateLayoutChanges="true"
            app:prompt_view_background_color="@color/colorPrimary"
            app:prompt_view_button_corner_radius="4dp"
            app:prompt_view_critical_feedback_question_negative_button_label="@string/prompt_critical_feedback_negative_label"
            app:prompt_view_critical_feedback_question_positive_button_label="@string/prompt_critical_feedback_positive_label"
            app:prompt_view_critical_feedback_question_title="@string/prompt_critical_feedback_title"
            app:prompt_view_positive_feedback_question_negative_button_label="@string/prompt_positive_feedback_negative_label"
            app:prompt_view_positive_feedback_question_positive_button_label="@string/prompt_positive_feedback_positive_label"
            app:prompt_view_positive_feedback_question_title="@string/prompt_positive_feedback_title"
            app:prompt_view_thanks_display_time_ms="2000"
            app:prompt_view_thanks_title="@string/prompt_thanks_title"
            app:prompt_view_title_text_color="@color/colorAccent"
            app:prompt_view_user_opinion_question_negative_button_label="@string/prompt_opinion_negative_label"
            app:prompt_view_user_opinion_question_positive_button_label="@string/prompt_opinion_positive_label"
            app:prompt_view_user_opinion_question_title="@string/prompt_opinion_title" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/dimmer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</RelativeLayout>